--- a/07_PublicTransport_interactive.ipynb
+++ b/07_PublicTransport_interactive.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> I've tried to structure the notebook to be easily reproducable. It focuses on a one neighborhood extracted from a larger file containing many suburbs ~ this can be wards / census tracts or even a municipality."
+    "> I've tried to structure the notebook to be easily reproducable. It focuses on one neighborhood extracted from a larger file containing many suburbs ~ this can be wards / census tracts or even a municipality."
    ]
   },
   {
